--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div class="containercr">
         <h1 class="imagecr-h1">Universal Image Converter and Resizer</h1>
-        <p style="padding:20px;">This tool works as an image resizer and converter.
+        <p style="padding:20px;"> This tool works as an image resizer and converter.
             You can use both functions simultaneously or one at a time.<br/>
             <a href="./cr-instructions.html" >Check user instructions</a> if you don't know how to use it.
         </p>
@@ -34,5 +34,6 @@
             <input type="submit" value="Resize and Download" onclick="resizeImage()">
         </form>
     </div>
+    <footer class="imagecr-h1"> Copyright&copy;2023 Abas Obot. All Rights Reserved!</footer>
 </body>
 </html>
