--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </p>
         <form class="formcr" onsubmit="return false;">
             <input type="file" id="fileInput" class="fileInput" id="file-input">
-            <label for="width">Width:</label>
-            <input type="number" id="width" name="width" min="1" max="10000">
-            <label for="height">Height:</label>
-            <input type="number" id="height" name="height" min="1" max="10000">
+            <label for="width">Width(px):</label>
+            <input type="number" id="width" name="width" min="1" max="10000" placeholder="enter width" required>
+            <label for="height">Height(px):</label>
+            <input type="number" id="height" name="height" min="1" max="10000" placeholder="enter height" required>
             <label for="format">Format:</label>
             <select id="format">
                 <option value=".jpg">JPG</option>
