--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Universal Image Converter and Resizer</title>
     <link rel="stylesheet" href="./imagecr.css">
-    <script type="text/javascript" src="./imagecr.js"></script>
+    <!--<script type="text/javascript" src="./imagecr.js"></script>-->
 
 </head>
 <body id="cr">
@@ -17,7 +17,7 @@
             <a href="./cr-instructions.html" >Check user instructions</a> if you don't know how to use it.
         </p>
         <form class="formcr" onsubmit="return false;">
-            <input type="file" id="fileInput" class="fileInput" id="file-input">
+            <input type="file" id="fileInput" class="fileInput" id="file-input" onChange="loadFile(event)">
             <label for="width">Width(px):</label>
             <input type="number" id="width" name="width" min="1" max="10000" placeholder="enter width" required>
             <label for="height">Height(px):</label>
@@ -32,9 +32,85 @@
                 <option value=".svg">SVG</option>
             </select>
             <input type="submit" value="Resize and Download" onclick="resizeImage()">
-        </form>
+        </form> <br/>
+        <!--image view box-->
+    <img id="showImg" src="images/img.png" >
+    <!--button of image to pdf converter-->
     </div>
     <br/><br/><br/>
     <footer class="imagecr-h1"> Copyright&copy;2023 Abas Obot. All Rights Reserved!</footer>
+     <script>    
+//converter and resizer
+        function resizeImage() {
+            var fileInput = document.getElementById('fileInput');
+            var width = document.getElementById('width').value;
+            var height = document.getElementById('height').value;
+            var format = document.getElementById('format').value;
+
+            if (fileInput.files.length > 0) {
+                var file = fileInput.files[0];
+                var reader = new FileReader();
+
+                reader.onload = function(e) {
+                    var img = new Image();
+                    img.onload = function() {
+                        var canvas = document.createElement('canvas');
+                        canvas.width = width;
+                        canvas.height = height;
+
+                        var ctx = canvas.getContext('2d');
+                        ctx.drawImage(img, 0, 0, width, height);
+
+                        var dataURL = canvas.toDataURL(format);
+                        download(dataURL, 'resized-image' + format);
+                    };
+                    img.src = e.target.result;
+                };
+                reader.readAsDataURL(file);
+            }
+        }
+
+        function download(dataURL, filename) {
+            var a = document.createElement('a');
+            a.href = dataURL;
+            a.download = filename;
+            document.body.appendChild(a);
+            a.click();
+        }
+
+        // adding original image size filling
+        var fileInput = document.getElementById("fileInput");
+var widthInput = document.getElementById("width");
+var heightInput = document.getElementById("height");
+
+fileInput.addEventListener("change", function() {
+  var file = fileInput.files[0];
+  var img = new Image();
+  img.onload = function() {
+    widthInput.value = img.width;
+    heightInput.value = img.height;
+  };
+  img.src = URL.createObjectURL(file);
+});
+    </script>
+
+    <!--JavaScript to show image-->
+<Script type="text/JavaScript">
+//get the image element
+var img = document.getElementById("showImg");
+
+//load the image file from the input
+function loadFile(event) {
+  //create a new FileReader object
+  var reader = new FileReader();
+  //set the onload event handler
+  reader.onload = function() {
+    //set the image source to the result of the reader
+    img.src = reader.result;
+  };
+  //read the file as a data URL
+  reader.readAsDataURL(event.target.files[0]);
+}
+</Script>
 </body>
 </html>
