--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <input type="submit" value="Resize and Download" onclick="resizeImage()">
         </form> <br/>
         <!--image view box-->
-    <img id="showImg" src="images/img.png" >
+    <img id="showImg" src="images/img.png" ><br/>
     <!--button of image to pdf converter-->
     </div>
     <br/><br/><br/>
