Ownership terms index.html
This project is ongoing and open to public contributions. Do not copy this project without my permission.

--- a/index.html
+++ b/index.html
@@ -113,4 +113,5 @@ function loadFile(event) {
 }
 </Script>
 </body>
+    <!--By Abasiama Akpan (Abas Obot). While you can contribute to this project, do not copy it without my permision-->
 </html>
