--- a/cr-instructions.html
+++ b/cr-instructions.html
@@ -3,26 +3,30 @@
     <ul>
         <h3><li>As Converter and resizer</li></h3>
         <ul>
-        <li>Choose any image from your device.</li>
-        <li>Set the size as you demand.</li>
-        <li>Select the image format to </li>
-        <li>Click on "Resize and Download to Save.</li>
+            <li>Click on 'Choose file'</li>
+             <li>Choose any image from your device.</li>
+            <li>Set the size as you demand.</li>
+            <li>Select the out image format from the dropdown menu.</li>
+            <li>Click on "Resize and Download" to Save.</li>
         </ul>
         <h3><li>As Image Converter Only</li></h3>
         <ul>
             <li>Chose image.</li>
-            <li>Set the width and height to match the default.</li>
-            <li>Select your image format choice.</li>
-            <li>Resize and download</li>
+            <li>Do not touch the sizing. This tool obtains the original size of the image during upload.</li>
+            <li>Select your image format choice suvh as .jpg, .webp, .png, etc.</li>
+            <li>Click on resize and download</li>
         </ul>
         <h3>As Image Resizer Only</h3>
         <ul>
             <li>Choose image.</li>
             <li>Write image size (width(px) and height(px)).</li>
             <li>Let the image format correspond with the original i.e
-                in .jpg, .png, .WebP, .BMP, etc.
+                in .jpg, .png, .WebP, .BMP, etc. by leaving the format at default as set during the upload.
             </li>
         </ul>
     </ul>
-    <p>Thank you for choosing our products. Sonr</p>
+    <p>Thank you for using this too</p>
+    <p>Note: This tool is developed by Abasiama Akpan (Abas Obot) and still under development. 
+        <a href="https://github.com/AbasObot1 target="_blank">Follow me on GitHub</a> to see my 
+        other projects and get update when the project is completed.</p>
     </div>
