--- a/cr-instructions.html
+++ b/cr-instructions.html
@@ -3,7 +3,7 @@
     <ul>
         <h3><li>As Converter and resizer</li></h3>
         <ul>
-            <li>Click on 'Choose file'</li>
+            <li>Click on 'Choose file'.</li>
              <li>Choose any image from your device.</li>
             <li>Set the size as you demand.</li>
             <li>Select the out image format from the dropdown menu.</li>
@@ -27,6 +27,6 @@
     </ul>
     <p>Thank you for using this too</p>
     <p>Note: This tool is developed by Abasiama Akpan (Abas Obot) and still under development. 
-        <a href="https://github.com/AbasObot1 target="_blank">Follow me on GitHub</a> to see my 
+        <a href="https://github.com/AbasObot1" target="_blank">Follow me on GitHub</a> to see my 
         other projects and get update when the project is completed.</p>
     </div>
