Added external JS
I added external JS to the file

--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Universal Image Converter and Resizer</title>
     <link rel="stylesheet" href="./imagecr.css">
-    <!--<script type="text/javascript" src="./imagecr.js"></script>-->
-    <style>
-        
-    </style>
-
 </head>
 <body id="cr">
         
@@ -41,7 +36,8 @@
     <!--button of image to pdf converter-->
     </div>
     <br/><br/><br/>
-    <footer class="imagecr-h1"> Copyright&copy;2023 Abas Obot. All Rights Reserved!</footer>  
+    <footer class="imagecr-h1"> Copyright&copy;2023 Abas Obot. All Rights Reserved!</footer>
+    <script src="https://github.com/AbasObot1/universal-image-tool/blob/main/style.js"></script>
 </body>
     <!--By Abasiama Akpan (Abas Obot). While you can contribute to this project, do not copy it without my permision-->
 </html>
