--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <h1 class="imagecr-h1">Universal Image Converter and Resizer</h1>
         <p style="padding:20px;"> This tool works as an image resizer and converter.
             You can use both functions simultaneously or one at a time.<br/>
-            <a href="./cr-instructions.html" >Check user instructions</a> if you don't know how to use it.
+            <a href="./cr-instructions.html" >Check user instructions</a> if you don't know how to use it. 
+            <b>Note:</b> Please this tool is temporary disabled. The working version is available in a private repository for improvement. 
+            Contact the developer if you are interested in the project.
         </p>
         <form class="formcr" onsubmit="return false;">
             <input type="file" id="fileInput" class="fileInput" id="file-input" onChange="loadFile(event)">
